--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -395,66 +395,19 @@
   to {
     opacity: 1; } }
 .info {
+  color: #073505;
   font-size: 20px;
-  padding-bottom: 10px;
+  padding-bottom: 1px;
   position: relative; }
   .info a {
     text-decoration: none; }
 
-.resume-coding {
-  text-align: left; }
-  .resume-coding .resume-coding-header {
-    font-size: 20px; }
-  .resume-coding .resume-coding-body {
-    padding: 20px;
-    font-size: 16px; }
+.summary .title {
+  color: #073505;
+  font-size: 20px; }
+.summary .bullets {
+  line-height: 1.6; }
 
-.resume-tools {
-  text-align: right; }
-  .resume-tools .resume-tools-header {
-    font-size: 20px; }
-  .resume-tools .resume-tools-body {
-    padding: 20px;
-    font-size: 16px; }
-
-.resume-projects {
-  text-align: center; }
-  .resume-projects .resume-projects-header {
-    font-size: 20px; }
-  .resume-projects .resume-projects-body p {
-    padding: 10px;
-    font-size: 16px; }
-  .resume-projects .resume-projects-body .video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 25px;
-    height: 0; }
-    .resume-projects .resume-projects-body .video-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%; }
-  .resume-projects .resume-projects-body .game-text p {
-    font-size: 16px; }
-
-@media only screen and (max-width: 570px) {
-  .resume-coding .resume-coding-header {
-    font-size: 26px; }
-  .resume-coding .resume-coding-body {
-    font-size: 16px; }
-
-  .resume-tools .resume-tools-header {
-    font-size: 26px; }
-  .resume-tools .resume-tools-body {
-    font-size: 16px; }
-
-  .resume-projects .resume-projects-header {
-    font-size: 26px; }
-  .resume-projects .resume-projects-body p {
-    font-size: 16px; }
-  .resume-projects .resume-projects-body .game-text p {
-    font-size: 16px; } }
 .modal-header2 {
   padding: 12px;
   display: inline; }
@@ -560,6 +513,16 @@
     opacity: 0; }
   to {
     opacity: 1; } }
+#skater {
+  align: center;
+  position: absolute;
+  z-index: 4;
+  padding-left: 50px;
+  padding-right: 50px; }
+
+#skater_inside {
+  position: relative; }
+
 body {
   overflow: hidden;
   z-index: 1;
@@ -571,14 +534,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 200px; }
-  body #skater {
-    align: center;
-    position: absolute;
-    z-index: 4;
-    padding-left: 50px;
-    padding-right: 50px; }
-  body #skater_inside {
-    position: relative; }
   body .title {
     z-index: 99;
     font-size: 48px;
